<resources>
    <string name="app_name" translatable="false">zaprett</string>
    <string name="title_home">Home</string>
    <string name="title_hosts">Hosts</string>
    <string name="title_settings">Settings</string>
    <string name="btn_continue">Continue</string>
    <string name="text_welcome">Hello to zaprett! This application is designed to bypass censorship and other blockages. For full functionality you need to install Magisk/KSU/APatch module.</string>
    <string name="btn_use_root">Use module</string>
    <string name="error_root_title">Can\'t get root</string>
    <string name="error_root_message">Couldn\'t get root access. Give root access to use the module</string>
    <string name="error_no_module_title">Module is not installed</string>
    <string name="error_no_module_message">zaprett module wasn\'t found. Please install it</string>
    <string name="snack_reload">Reloading zaprett...</string>
    <string name="snack_module_disabled">Module disabled! Cant\'t execute action</string>
    <string name="title_strategy">Strategy</string>
    <string name="status_not_availible">Status of zaprett is unkown. Tap to update</string>
    <string name="status_enabled">zaprett service is working. Tap to update</string>
    <string name="status_disabled">zaprett service disabled.</string>
    <string name="status_crashed">zaprett service crashed. Tap restart button below</string>
    <string name="btn_update_on_boot">Update the status when the Home page is launched</string>
    <string name="btn_start_service">Start service</string>
    <string name="btn_stop_service">Stop service</string>
    <string name="btn_autorestart">Restart service periodicaly</string>
    <string name="snack_already_started">Service already started.</string>
    <string name="snack_starting_service">Starting service...</string>
    <string name="snack_no_service">Service is not launched</string>
    <string name="snack_stopping_service">Stopping service...</string>
    <string name="error_no_storage_title">No permission</string>
    <string name="error_no_storage_message">The application requires permission to acess the storage to work properly</string>
    <string name="btn_show_full_path">Show full list\'s path</string>
    <string name="pls_reboot_snack">Reboot your device for the changes to take effect</string>
    <string name="pls_restart_snack">Restart zaprett service for the changes to take effects</string>
    <string name="snack_no_storage">Grant permission to access the storage to continue</string>
    <string name="snack_no_lists">Lists and/or config were not found. Reinstall the module</string>
    <string name="error">Error</string>
    <string name="btn_later">Later</string>
    <string name="btn_download">Download</string>
    <string name="downloading_title">Loading APK...</string>
    <string name="downloading_text">%1$s -> %2$s\nChangelog: %3$s</string>
    <string name="btn_cancel">Cancel</string>
    <string name="new_update">Update avaliable</string>
    <string name="new_upd_text">New verison %1$s.\nChangelog: %2$s</string>
    <string name="updating_msg">Updating zaprett</string>
    <string name="already_downloading">Download already in progress</string>
    <string name="download_canceled">Download canceled.</string>
    <string name="btn_autoupdate">Offer updates</string>
    <string name="btn_delete">Delete</string>
    <string name="title_deletion">Deletion</string>
    <string name="btn_yes">Yes</string>
    <string name="msg_deletion">Are you really want to delete %1$s? This action can\'t be undone</string>
    <string name="btn_restart">Restart</string>
</resources>
