<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.egorwhite.zaprett.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_hosts"
        android:name="io.egorwhite.zaprett.ui.hosts.HostsFragment"
        android:label="@string/title_hosts"
        tools:layout="@layout/fragment_hosts" />

    <fragment
        android:id="@+id/navigation_strategy"
        android:name="io.egorwhite.zaprett.ui.strategy.StrategyFragment"
        android:label="@string/title_strategy"
        tools:layout="@layout/fragment_strategy" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="io.egorwhite.zaprett.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>