<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.settings.SettingsFragment">

    <ImageView
        android:id="@+id/tittlezaprettbg"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        android:importantForAccessibility="no"
        android:src="@drawable/title_oval" />

    <TextView
        android:id="@+id/titlezaprett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:paddingBottom="7dp"
        android:backgroundTint="@color/brightest"
        android:elegantTextHeight="true"
        android:fontFamily="@font/unbounded"
        android:text="@string/title_settings"
        android:textColor="@color/brightest"
        android:textSize="32sp"
        app:layout_anchor="@+id/tittlezaprettbg"
        app:layout_anchorGravity="start|center"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/btn_use_module"
        style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:checked="false"
        android:fontFamily="@font/productsans"
        android:paddingHorizontal="15dp"
        android:switchMinWidth="56dp"
        android:text="@string/btn_use_root"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:thumbTextPadding="25dp"
        android:typeface="sans"
        app:thumbTint="@color/brightest"
        app:trackTint="@color/light_window"
        tools:text="@string/btn_use_root" />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/btn_update_on_create"
        style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:checked="false"
        android:fontFamily="@font/productsans"
        android:paddingHorizontal="15dp"
        android:switchMinWidth="56dp"
        android:text="@string/btn_update_on_boot"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:thumbTextPadding="25dp"
        android:typeface="sans"
        app:thumbTint="@color/brightest"
        app:trackTint="@color/light_window"
        tools:text="@string/btn_update_on_boot" />


    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

    </LinearLayout>!-->

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </ScrollView>!-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>